[package]
name = "bevy-minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_egui = "0.11"
bevy-inspector-egui = "0.8"
colored = "2.0"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
